tests/core/error/function-5.rq
SELECT (tracker:uri(false) AS ?u) { }
